[package]
name = "clahe"
version = "0.1.0"
edition = "2021"

description = "CLAHE (Contrast Limited Adaptive Histogram Equalisation)"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
license = "MIT"

[[bin]]
name = "clahe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
log = "0"
image = { version = "0.24", features = [
    "jpeg",
    "png",
], default-features = false }

[dev-dependencies]
imageproc = "0"
