[package]
name = "clahe"
version = "0.1.0"
edition = "2021"

description = "CLAHE (Contrast Limited Adaptive Histogram Equalisation)"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
repository = "https://github.com/ykszk/clahe"
license = "MIT"

[[bin]]
name = "clahe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
log = "0"
image = { version = "0.24", features = [
    "jpeg",
    "png",
], default-features = false }
ndarray = "0.15.6"
num-traits = "0.2.17"
ndarray-stats = "0.5.1"
coolor = "0.8.0"
thiserror = "1.0"

[dev-dependencies]
imageproc = "0"
pretty_assertions = "1.4.0"
